--- a/src/app/components/packages/packages.component.html
+++ b/src/app/components/packages/packages.component.html
@@ -7,43 +7,39 @@
   <div class="swiper-container">
     <div class="swiper-wrapper">
       <div class="swiper-slide" *ngFor="let package of packages">
-        <div class="package-item animate-on-scroll" appInViewport [ngClass]="{
+        <div class="package-item animate-on-scroll" appInViewport 
+          [ngClass]="{
             'package-diamond': package.name.includes('الماسية'),
             'package-fort': package.name.includes('الحصون'),
             'package-bronze': package.name.includes('برونزية'),
             'package-silver': package.name.includes('الفضية'),
             'package-gold': package.name.includes('ذهبية')
           }">
+          
+          <!-- اسم الباقة -->
           <div class="package-title">{{ package.name }}</div>
-          <div class="package-price">
-            <strong *ngIf="package.currency === 'LE'">
-              {{ package.price }} ج.م / الشهر
-            </strong>
-            <strong *ngIf="package.currency === 'SAR'">
-              {{ package.price }} ريال / الشهر
-            </strong>
-            <strong *ngIf="package.currency === 'USD'">
-              ${{ package.price }} / month
-            </strong>
-          </div>
-     
-          
-          
+
+          <!-- السعر حسب الدولة -->
+         <div class="package-price">
+  <strong>{{ getPrice(package) }}</strong>
+</div>
+
+          <!-- مميزات الباقة -->
           <ul class="package-features">
             <li>الدقائق الكلية: {{ package.totalMinutes }}</li>
-            <!-- <li>عدد المشتركين: {{ package.subscriberCount }}</li> -->
-            <li>نوع الاشتراك: {{ package.subscribeType }}</li>
+            <li>نوع الاشتراك: {{ package.subscribeType.name }}</li>
           </ul>
+
+          <!-- زر الاشتراك -->
           <a href="https://ajyalalquran.somee.com/#/add-packages" target="_blank">
             <button class="btn-select">اشترك الآن</button>
           </a>
         </div>
       </div>
     </div>
-    <!-- Swiper navigation buttons -->
+
+    <!-- أزرار التنقل في السلايدر -->
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
-    <!-- Swiper pagination -->
-    <!-- <div class="swiper-pagination"></div> -->
   </div>
 </div>
