--- a/src/app/components/packages/packages.component.html
+++ b/src/app/components/packages/packages.component.html
@@ -17,7 +17,7 @@
           }">
           
           <!-- اسم الباقة -->
-          <div class="package-title">{{ package.name }}</div>
+          <div class="package-title">{{ package.nameWithoutConcat }}</div>
 
           <!-- السعر حسب الدولة -->
          <div class="package-price">
