--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
     <!-- Company Info -->
     <div class="footer-section company-info">
       <h3 class="company-heading">{{companyName}}</h3>
-      <img src="https://ajyalalquran.somee.com/assets/images/agialLogo.jpg" [alt]="companyName + ' logo'" width="100"
+      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" [alt]="companyName + ' logo'" width="100"
         height="100" class="img-navbar" loading="lazy" />
     </div>
 
