--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg custom-navbar" [ngClass]="{ 'scrolled': isScrolled }">
   <div class="container-fluid">
     <a class="navbar-brand d-lg-none" href="#">
-      <img src="https://ajyalalquran.somee.com/assets/images/agialLogo.jpg" alt="شعار أجيال القرآن" width="40"
+      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="40"
         height="40" class="img-navbar" loading="lazy" />
     </a>
 
@@ -20,7 +20,7 @@
 
       </ul>
       <a class="navbar-brand d-none d-lg-block mx-3" href="#">
-        <img src="https://ajyalalquran.somee.com/assets/images/agialLogo.jpg" alt="شعار أجيال القرآن" width="50"
+        <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="50"
           height="50" class="img-navbar" loading="lazy" />
       </a>
     </div>
