--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -62,27 +62,27 @@
     </div>
 
     <div class="row mt-5 g-4" data-animate>
-      <div class="col-12 col-md-4" data-animate>
+      <div class="col-12 col-md-6" data-animate>
         <div class="contact-info text-center p-3" data-animate>
           <i class="fas fa-phone mb-3"></i>
-          <h4 class="h5">الهاتف</h4>
+          <h4 class="h5">الواتساب</h4>
           <p class="mb-0">201099381081+</p>
         </div>
       </div>
-      <div class="col-12 col-md-4" data-animate>
+      <div class="col-12 col-md-6" data-animate>
         <div class="contact-info text-center p-3" data-animate>
           <i class="fas fa-envelope mb-3"></i>
           <h4 class="h5">البريد الإلكتروني</h4>
           <p class="mb-0">allhghayte8&#64;gmail.com</p>
         </div>
       </div>
-      <div class="col-12 col-md-4" data-animate>
+      <!-- <div class="col-12 col-md-4" data-animate>
         <div class="contact-info text-center p-3" data-animate>
           <i class="fas fa-map-marker-alt mb-3"></i>
           <h4 class="h5">العنوان</h4>
           <p class="mb-0">مصر</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
