--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,8 +26,7 @@
         البريد الإلكتروني:
         <a [href]="'mailto:' + contactInfo.email">{{contactInfo.email}}</a>
       </p>
-      <p>الهاتف: {{contactInfo.phone}}</p>
-      <p>العنوان: {{contactInfo.address}}</p>
+      <p>الواتساب: {{contactInfo.phone}}</p>
     </div>
 
     <!-- Social Media -->
