--- a/src/app/components/packages/packages.component.html
+++ b/src/app/components/packages/packages.component.html
@@ -1,3 +1,4 @@
+<h1>{{  "الاقسام" }}</h1>
 <div class="swiper-container">
   <div class="swiper-wrapper">
     <div class="swiper-slide" *ngFor="let package of packages">
