--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,7 +15,7 @@
         <li class="nav-item"><a class="nav-link active" href="#about">من نحن</a></li>
         <li class="nav-item"><a class="nav-link" href="#features">الميزات</a></li>
         <li class="nav-item"><a class="nav-link" href="#our-services">خدماتنا</a></li>
-        <li class="nav-item"><a class="nav-link" href="#packages">الباقات</a></li>
+        <li class="nav-item"><a class="nav-link" href="#packages"> أقسام المدرسة</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">اتصل بنا</a></li>
 
       </ul>
