--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg custom-navbar" [ngClass]="{ 'scrolled': isScrolled }">
   <div class="container-fluid">
     <a class="navbar-brand d-lg-none" href="#">
-      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="40"
-        height="40" class="img-navbar" loading="lazy" />
+      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="40" height="40"
+        class="img-navbar" loading="lazy" />
     </a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -17,11 +17,12 @@
         <li class="nav-item"><a class="nav-link" href="#our-services">خدماتنا</a></li>
         <li class="nav-item"><a class="nav-link" href="#packages"> أقسام المدرسة</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">اتصل بنا</a></li>
+        
 
       </ul>
       <a class="navbar-brand d-none d-lg-block mx-3" href="#">
-        <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="50"
-          height="50" class="img-navbar" loading="lazy" />
+        <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="50" height="50"
+          class="img-navbar" loading="lazy" />
       </a>
     </div>
   </div>
