--- a/src/app/components/back-to-top/back-to-top.component.html
+++ b/src/app/components/back-to-top/back-to-top.component.html
@@ -5,6 +5,6 @@
   <a href="https://wa.me/+201099381081" target="_blank" class="whatsapp-btn" aria-label="تواصل معنا عبر واتساب">
     <i class="fab fa-whatsapp"></i>
   </a>
-  <button *ngIf="isPlaying == true" (click)="playAudio()" class="play-btn">🎵 تشغيل الصوت</button>
+  <button *ngIf="isPlaying == false" (click)="playAudio()" class="play-btn">🎵 تشغيل الصوت</button>
   
 </div>
