--- a/src/app/components/back-to-top/back-to-top.component.html
+++ b/src/app/components/back-to-top/back-to-top.component.html
@@ -5,14 +5,6 @@
   <a href="https://wa.me/+201099381081" target="_blank" class="whatsapp-btn" aria-label="تواصل معنا عبر واتساب">
     <i class="fab fa-whatsapp"></i>
   </a>
-  <div class="audio-control">
-  <button (click)="toggleAudio()" class="audio-btn">
-    {{ isPlaying ? '⏸️ إيقاف' : '▶️ تشغيل' }}
-  </button>
-
-  <button (click)="toggleMute()" class="audio-btn mute-btn">
-    {{ isMuted ? '🔇' : '🔊' }}
-  </button>
-</div>
+  <button    (click)="playAudio()" class="play-btn"> {{ isPlaying ? '⏸️' : '🎵' }}</button>
   
 </div>
