--- a/src/app/components/back-to-top/back-to-top.component.css
+++ b/src/app/components/back-to-top/back-to-top.component.css
@@ -7,39 +7,31 @@
   flex-direction: column;
   gap: 1rem;
 }
-.audio-control {
-  /* position: fixed; */
-  bottom: 20px;
-  right: 20px;
-  z-index: 9999;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+.play-btn {
+      background-color: #515151;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 13px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+    width: 60px;
+    height: 60px;
+    display: flex
+;
+    align-items: center;
+    justify-content: center;
 }
 
-.audio-btn {
+.play-btn:hover {
   background-color: #1abc9c;
-  color: white;
-  border: none;
-  border-radius: 50px;
-  padding: 12px 20px;
-  font-size: 16px;
-  font-family: inherit;
-  cursor: pointer;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-  transition: background-color 0.3s ease;
+  transform: scale(1.05);
 }
 
-.audio-btn:hover {
-  background-color: #16a085;
-}
-
-.mute-btn {
-  background-color: #34495e;
-}
-
-.mute-btn:hover {
-  background-color: #2c3e50;
+.play-btn:active {
+  transform: scale(0.95);
 }
 .back-to-top-btn {
   background-color: #007bff;
