--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -54,6 +54,9 @@
 .scrolled .navbar-toggler {
   color: #333;
 }
+.scrolled .nav-link {
+  color: #333;
+}
 
 .navbar-toggler:focus {
   box-shadow: none;
