--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,19 +1,23 @@
-<footer class="footer-container">
+<footer class="footer-container" [dir]="currentLang === 'ar' ? 'rtl' : 'ltr'">
   <div class="footer-content">
+
     <!-- Company Info -->
     <div class="footer-section company-info">
-      <h3 class="company-heading">{{companyName}}</h3>
-      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" [alt]="companyName + ' logo'" width="100"
-        height="100" class="img-navbar" loading="lazy" />
+      <h3 class="company-heading">
+        {{ currentLang === 'ar' ? companyName.ar : companyName.en  }}
+      </h3>
+      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg"
+           [alt]= '' width="100" height="100"
+           class="img-navbar" loading="lazy" />
     </div>
 
     <!-- Quick Links -->
     <div class="footer-section quick-links">
-      <h4>روابط سريعة</h4>
+      <h4>{{ currentLang === 'ar' ? 'روابط سريعة' : 'Quick Links' }}</h4>
       <ul>
         <li *ngFor="let link of quickLinks">
           <a class="nav-link" [routerLink]="link.path" routerLinkActive="active" (click)="scrollTo($event)">
-            {{link.text}}
+            {{ currentLang === 'ar' ? link.textAr : link.textEn }}
           </a>
         </li>
       </ul>
@@ -21,21 +25,24 @@
 
     <!-- Contact Info -->
     <div class="footer-section contact-info">
-      <h4>اتصل بنا</h4>
+      <h4>{{ currentLang === 'ar' ? 'اتصل بنا' : 'Contact Us' }}</h4>
       <p>
-        البريد الإلكتروني:
-        <a [href]="'mailto:' + contactInfo.email">{{contactInfo.email}}</a>
+        {{ currentLang === 'ar' ? 'البريد الإلكتروني:' : 'Email:' }}
+        <a [href]="'mailto:' + contactInfo.email">{{ contactInfo.email }}</a>
       </p>
-      <p>الواتساب: {{contactInfo.phone}}</p>
+      <p>
+        {{ currentLang === 'ar' ? 'الواتساب:' : 'WhatsApp:' }}
+        {{ contactInfo.phone }}
+      </p>
     </div>
 
     <!-- Social Media -->
     <div class="footer-section social-media">
-      <h4>تابعنا</h4>
+      <h4>{{ currentLang === 'ar' ? 'تابعنا' : 'Follow Us' }}</h4>
       <div class="social-links">
         <a *ngFor="let social of socialLinks" [href]="social.url" target="_blank" rel="noopener noreferrer"
-          [attr.aria-label]="social.ariaLabel">
-          <i class="fab fa-{{social.icon}}" aria-hidden="true"></i>
+           >
+          <i class="fab fa-{{ social.icon }}" aria-hidden="true"></i>
         </a>
       </div>
     </div>
@@ -43,6 +50,9 @@
 
   <!-- Footer Bottom -->
   <div class="footer-bottom">
-    <p>&copy; {{currentYear}} {{companyName}}. جميع الحقوق محفوظة.</p>
+    <p>
+      &copy; {{ currentYear }} {{  currentLang === 'ar' ? companyName.ar : companyName.en   }}.
+      {{ currentLang === 'ar' ? 'جميع الحقوق محفوظة.' : 'All rights reserved.' }}
+    </p>
   </div>
 </footer>
