--- a/src/app/components/packages/packages.component.css
+++ b/src/app/components/packages/packages.component.css
@@ -109,6 +109,7 @@ h1,
   background: #fff;
   width: 36px;
   height: 36px;
+      opacity: 0.4;
   border-radius: 50%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
