--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -15,7 +15,11 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 0.5rem 0;
 }
-
+.custom-navbar {
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 0.5rem 0;
+}
 .navbar-brand {
   padding: 0;
 }
@@ -30,7 +34,7 @@
 }
 
 .nav-link {
-  color: white;
+  /* color: white; */
   font-weight: 500;
   padding: 0.5rem 1rem !important;
   transition: color 0.3s ease;
