Initial commit - Angular project

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <!-- Logo for small screens -->
     <a class="navbar-brand d-lg-none" href="#">
-      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="40" height="40"
+      <img src="https://ajyalquran.somee.com/media/Logo.jpg" alt="شعار أجيال القرآن" width="40" height="40"
         class="img-navbar" loading="lazy" />
     </a>
 
@@ -49,7 +49,7 @@
 
       <!-- Logo for large screens -->
       <a class="navbar-brand d-none d-lg-block mx-3" href="#">
-        <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg" alt="شعار أجيال القرآن" width="50" height="50"
+        <img src="https://ajyalquran.somee.com/media/Logo.jpg" alt="شعار أجيال القرآن" width="50" height="50"
           class="img-navbar" loading="lazy" />
       </a>
     </div>
