--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
       <h3 class="company-heading">
         {{ currentLang === 'ar' ? companyName.ar : companyName.en  }}
       </h3>
-      <img src="https://ajyalalquran.somee.com/assets/images/Logo.jpg"
+      <img src="https://ajyalquran.somee.com/media/Logo.jpg"
            [alt]= '' width="100" height="100"
            class="img-navbar" loading="lazy" />
     </div>
